adding is deleted and book deleted function
