# ses3/infrastructure/inventory/controller_delete_book.go
@@ -3,7 +3,6 @@ package inventory
 import (
 	"context"
 	sh "github.com/geb/aweproj/ses3/shared"
-	inventory_dto "github.com/geb/aweproj/ses3/shared/dto/inventory"
 	"github.com/labstack/echo/v4"
 	"strconv"
 )
@@ -14,21 +13,15 @@ import (
 // @Description Put all mandatory parameter
 // @Param X-Username header string true "guest" default(guest)
 // @Param Accept-Language header string true "EN" default(EN)
-// @Param BookDto body inventory.BookReq true "BookRequest"
 // @Param id path string true "objectId"
 // @Accept json
 // @Produce json
 // @Success 200
-// @Router /inventory/book/update/{id} [put]
-func (c *Controller) UpdateBook(ec echo.Context) error {
+// @Router /inventory/book/delete/{id} [delete]
+func (c *Controller) DeleteBook(ec echo.Context) error {
 	var (
-		ctx     = context.Background()
-		request inventory_dto.BookReq
+		ctx = context.Background()
 	)
-
-	if err := ec.Bind(&request); err != nil {
-		return sh.Response(ec, nil, sh.New(sh.BAD_REQUEST, err))
-	}
 
 	idStr := ec.Param("id")
 	id, err := strconv.Atoi(idStr)
@@ -36,11 +29,7 @@ func (c *Controller) UpdateBook(ec echo.Context) error {
 		return sh.Response(ec, nil, sh.New(sh.BAD_REQUEST, err))
 	}
 
-	if err := ec.Validate(&request); err != nil {
-		return sh.Response(ec, nil, sh.New(sh.BAD_REQUEST, err))
-	}
-
-	err = c.InterfacesHolder.InventoryViewService.UpdateBook(ctx, id, request)
+	err = c.InterfacesHolder.InventoryViewService.DeleteBook(ctx, id)
 
 	if err != nil {
 		return sh.Response(ec, nil, sh.New(sh.BAD_REQUEST, err))
